--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 *{
     box-sizing: border-box;
-    
+    color: #500202;
 }
 
 .cab{
@@ -161,9 +161,10 @@ a.nav-link{
 
    display: flex;
    margin-bottom: 40px;
-   height: 60px;
+   height: 80px;
    display: flex;
     width: 50%;
+    border-radius: 20px;
  
 }
 
@@ -177,6 +178,7 @@ a.nav-link{
     width: 120px;
     transition: 300ms;
     text-align: center;
+    margin-top: 50px;
 }
 
 .button:hover{
@@ -207,4 +209,16 @@ footer{
     color: #ffffff;
 
     
+}
+
+
+
+ a{
+
+    font-size: 30px;
+    padding: 60px;
+    text-decoration: none;
+    color: rgb(19, 1, 1);
+    font-weight: bolder;
+
 }
